Fixed white space above game over screen.

--- a/week2/assets/css/main.css
+++ b/week2/assets/css/main.css
@@ -7,7 +7,7 @@ body {
 }
 #ad {
     position: absolute;
-    z-index: 1000;
+    z-index: 1;
     width: 100%;
     height: 100%;
 }
